--- a/FlowTutorials.ConsoleClient/FlowTutorials.ConsoleClient.csproj
+++ b/FlowTutorials.ConsoleClient/FlowTutorials.ConsoleClient.csproj
@@ -9,8 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.3.0" />
-    <PackageReference Include="Flow.Core" Version="3.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Flow.Core" Version="3.1.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
     <PackageReference Include="Instructor.Core" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
     <PackageReference Include="When.Core" Version="1.0.0" />
   </ItemGroup>
 
@@ -21,6 +25,10 @@
     <None Update="Common\Data\RegistrationData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FlowTutorials.Contracts\FlowTutorials.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
