--- a/FlowTutorials.WebServer/FlowTutorials.WebServer.csproj
+++ b/FlowTutorials.WebServer/FlowTutorials.WebServer.csproj
@@ -8,13 +8,21 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.3.0" />
-    <PackageReference Include="Flow.Core" Version="3.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Flow.Core" Version="3.1.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
     <PackageReference Include="Instructor.Core" Version="1.0.0" />
     <PackageReference Include="When.Core" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="GrpcServices\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FlowTutorials.Application\FlowTutorials.Application.csproj" />
+    <ProjectReference Include="..\FlowTutorials.Contracts\FlowTutorials.Contracts.csproj" />
+    <ProjectReference Include="..\FlowTutorials.Infrastructure\FlowTutorials.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
