--- a/FlowTutorials.ConsoleClient/FlowTutorials.ConsoleClient.csproj
+++ b/FlowTutorials.ConsoleClient/FlowTutorials.ConsoleClient.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Instructor.Core" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
+    <PackageReference Include="protobuf-net.Grpc" Version="1.2.2" />
+    <PackageReference Include="protobuf-net.Grpc.ClientFactory" Version="1.2.2" />
     <PackageReference Include="When.Core" Version="1.0.0" />
   </ItemGroup>
 
